--- a/Conference-LaTeX-template_10-17-19/conference_101719.tex
+++ b/Conference-LaTeX-template_10-17-19/conference_101719.tex
@@ -151,12 +151,24 @@ The adjective is an ordinal number&first, second, third\\
 The types of named entities that would be merged are name, location, time, number, and money.
 
 \paragraph{Merge Adjective Phrase}
-To extract adjective phrase, we used the textacy library which is an extension of spaCy. The extraction is done using the rule described in Fig. 4. The meaning of the pattern is: Find an adjective token, can be followed by an adverb token or not, which is followed by another adjective token and can be followed by another adverb token or not.
+To extract adjective phrase, we used the textacy library which is an extension of spaCy. The extraction is done using the rule described in Fig.~\ref{fig4}. The meaning of the pattern is: Find an adjective token, can be followed by an adverb token or not, which is followed by another adjective token and can be followed by another adverb token or not.
 
 \subsubsection{Cleaning a Sentence}
 After the preprocessing steps were done, we proceeded to clean each sentence by removing stopwords, URLs, and named entities.
 
-The example of input and final output from the preprocessing steps is displayed on Fig 5. In the output, each token is followed by its part-of-speech (POS) tag obtained from spaCy. While doing the POS tagging, spaCy followed the Universal POS tags format from the Universal Dependencies scheme.
+The example of input and final output from the preprocessing steps is displayed on Fig.~\ref{fig5}. In the output, each token is followed by its part-of-speech (POS) tag obtained from spaCy. While doing the POS tagging, spaCy followed the Universal POS tags format from the Universal Dependencies scheme.
+
+\begin{figure}[htbp]
+\centerline{\includegraphics[width=0.47\textwidth]{fig4.jpg}}
+\caption{Patterns for extracting adjective phrase.}
+\label{fig4}
+\end{figure}
+
+\begin{figure}[htbp]
+\centerline{\includegraphics[width=0.47\textwidth]{fig5.jpg}}
+\caption{An example of input and final output.}
+\label{fig5}
+\end{figure}
 
 \subsection{Domain-Specific Word Embedding}
 To build a domain-specific word embedding, we used an implementation of sense2vec provided by Explosion AI3. The sense2vec model was trained using word2vec via FastText. To avoid using n-gram, we set the value of the maximum n-gram size parameter to 0. There are two types of word2vec model that we used to build the embedding: CBOW and Skip-gram. For each model, we created word vectors of size 300 and 400.
@@ -177,171 +189,88 @@ After separating train and test data, we classified the words in the test data i
 \paragraph{SVM Classifier with RBF Kernel}
 This classifier was chosen because of its proven ability to produce good results on text classification tasks [15]. For the feature, we used normalized word vectors.
 
-\paragraph{Cosine Similarity}
-In this method, we compared the similarity of each word to the averaged word vector of aspect class, averaged word vector of opinion class, and averaged word vector of other class. After that, we chose the nearest averaged word vector as the class.
-
-\subsubsection{Unsupervised Approach}
-In this approach, we clustered the word vectors in train data using K-Means and K-Medoids method. Then, we used the computed centroids to predict the test data.
-
 \begin{table*}[htbp]
-\caption{List of Exceptions with Examples}
+\caption{Examples of Domain-Specific Lexicon Created Using Term Frequency}
 \begin{center}
-\begin{tabular}{|c|c|}
+\begin{tabular}{|c|c|c|c|c|c|}
 \hline
-\textbf{Exceptions} & \textbf{Examples}\\
+\multicolumn{2}{|c|}{\textbf{Restaurant}}&\multicolumn{2}{|c|}{\textbf{Handphone}}&\multicolumn{2}{|c|}{\textbf{Digital Camera}}\\
+\hline 
+\textbf{\textit{Aspect}}& \textbf{\textit{Opinion}}&\textbf{\textit{Aspect}}& \textbf{\textit{Opinion}}&\textbf{\textit{Aspect}}& \textbf{\textit{Opinion}}\\
 \hline
-Phrase is a term in WordNet&digital camera, mineral water\\
+dishes$\vert$NOUN&lovely$\vert$ADJ&display$\vert$NOUN & huge$\vert$ADJ& camera$\vert$NOUN& large$\vert$ADJ\\
 \hline
-The adjective is a nationality&French, English, Welsh\\
+restaurant$\vert$NOUN&best$\vert$ADJ&price$\vert$NOUN&very\_good$\vert$ADJ&sensor$\vert$NOUN&fine$\vert$ADJ\\
 \hline
-The adjective is a color&red, blue, yellow\\
+menu$\vert$NOUN&enjoyed$\vert$VERB&feature$\vert$NOUN&quick$\vert$ADJ&quality$\vert$NOUN&detailed$\vert$ADJ  \\
 \hline
-The adjective is an ordinal number&first, second, third\\
+flavour$\vert$NOUN&delicious$\vert$ADJ&phone$\vert$NOUN&clear$\vert$ADJ&model$\vert$NOUN&quick$\vert$ADJ \\
+\hline
+cooking$\vert$NOUN&good$\vert$ADJ&battery$\vert$NOUN&impressive$\vert$ADJ&lens$\vert$NOUN&excellent$\vert$ADJ \\
 \hline
 \end{tabular}
 \label{tab2}
 \end{center}
 \end{table*}
 
-\begin{itemize}
-\item Use either SI (MKS) or CGS as primary units. (SI units are encouraged.) English units may be used as secondary units (in parentheses). An exception would be the use of English units as identifiers in trade, such as ``3.5-inch disk drive''.
-\item Avoid combining SI and CGS units, such as current in amperes and magnetic field in oersteds. This often leads to confusion because equations do not balance dimensionally. If you must use mixed units, clearly state the units for each quantity that you use in an equation.
-\item Do not mix complete spellings and abbreviations of units: ``Wb/m\textsuperscript{2}'' or ``webers per square meter'', not ``webers/m\textsuperscript{2}''. Spell out units when they appear in text: ``. . . a few henries'', not ``. . . a few H''.
-\item Use a zero before decimal points: ``0.25'', not ``.25''. Use ``cm\textsuperscript{3}'', not ``cc''.)
-\end{itemize}
-
-\subsection{Equations}
-Number equations consecutively. To make your 
-equations more compact, you may use the solidus (~/~), the exp function, or 
-appropriate exponents. Italicize Roman symbols for quantities and variables, 
-but not Greek symbols. Use a long dash rather than a hyphen for a minus 
-sign. Punctuate equations with commas or periods when they are part of a 
-sentence, as in:
-\begin{equation}
-a+b=\gamma\label{eq}
-\end{equation}
-
-Be sure that the 
-symbols in your equation have been defined before or immediately following 
-the equation. Use ``\eqref{eq}'', not ``Eq.~\eqref{eq}'' or ``equation \eqref{eq}'', except at 
-the beginning of a sentence: ``Equation \eqref{eq} is . . .''
-
-\subsection{\LaTeX-Specific Advice}
-
-Please use ``soft'' (e.g., \verb|\eqref{Eq}|) cross references instead
-of ``hard'' references (e.g., \verb|(1)|). That will make it possible
-to combine sections, add equations, or change the order of figures or
-citations without having to go through the file line by line.
-
-Please don't use the \verb|{eqnarray}| equation environment. Use
-\verb|{align}| or \verb|{IEEEeqnarray}| instead. The \verb|{eqnarray}|
-environment leaves unsightly spaces around relation symbols.
-
-Please note that the \verb|{subequations}| environment in {\LaTeX}
-will increment the main equation counter even when there are no
-equation numbers displayed. If you forget that, you might write an
-article in which the equation numbers skip from (17) to (20), causing
-the copy editors to wonder if you've discovered a new method of
-counting.
-
-{\BibTeX} does not work by magic. It doesn't get the bibliographic
-data from thin air but from .bib files. If you use {\BibTeX} to produce a
-bibliography you must send the .bib files. 
-
-{\LaTeX} can't read your mind. If you assign the same label to a
-subsubsection and a table, you might find that Table I has been cross
-referenced as Table IV-B3. 
-
-{\LaTeX} does not have precognitive abilities. If you put a
-\verb|\label| command before the command that updates the counter it's
-supposed to be using, the label will pick up the last counter to be
-cross referenced instead. In particular, a \verb|\label| command
-should not go before the caption of a figure or a table.
-
-Do not use \verb|\nonumber| inside the \verb|{array}| environment. It
-will not stop equation numbers inside \verb|{array}| (there won't be
-any anyway) and it might stop a wanted equation number in the
-surrounding equation.
-
-\subsection{Some Common Mistakes}\label{SCM}
-\begin{itemize}
-\item The word ``data'' is plural, not singular.
-\item The subscript for the permeability of vacuum $\mu_{0}$, and other common scientific constants, is zero with subscript formatting, not a lowercase letter ``o''.
-\item In American English, commas, semicolons, periods, question and exclamation marks are located within quotation marks only when a complete thought or name is cited, such as a title or full quotation. When quotation marks are used, instead of a bold or italic typeface, to highlight a word or phrase, punctuation should appear outside of the quotation marks. A parenthetical phrase or statement at the end of a sentence is punctuated outside of the closing parenthesis (like this). (A parenthetical sentence is punctuated within the parentheses.)
-\item A graph within a graph is an ``inset'', not an ``insert''. The word alternatively is preferred to the word ``alternately'' (unless you really mean something that alternates).
-\item Do not use the word ``essentially'' to mean ``approximately'' or ``effectively''.
-\item In your paper title, if the words ``that uses'' can accurately replace the word ``using'', capitalize the ``u''; if not, keep using lower-cased.
-\item Be aware of the different meanings of the homophones ``affect'' and ``effect'', ``complement'' and ``compliment'', ``discreet'' and ``discrete'', ``principal'' and ``principle''.
-\item Do not confuse ``imply'' and ``infer''.
-\item The prefix ``non'' is not a word; it should be joined to the word it modifies, usually without a hyphen.
-\item There is no period after the ``et'' in the Latin abbreviation ``et al.''.
-\item The abbreviation ``i.e.'' means ``that is'', and the abbreviation ``e.g.'' means ``for example''.
-\end{itemize}
-An excellent style manual for science writers is \cite{b7}.
-
-\subsection{Authors and Affiliations}
-\textbf{The class file is designed for, but not limited to, six authors.} A 
-minimum of one author is required for all conference articles. Author names 
-should be listed starting from left to right and then moving down to the 
-next line. This is the author sequence that will be used in future citations 
-and by indexing services. Names should not be listed in columns nor group by 
-affiliation. Please keep your affiliations as succinct as possible (for 
-example, do not differentiate among departments of the same organization).
-
-\subsection{Identify the Headings}
-Headings, or heads, are organizational devices that guide the reader through 
-your paper. There are two types: component heads and text heads.
-
-Component heads identify the different components of your paper and are not 
-topically subordinate to each other. Examples include Acknowledgments and 
-References and, for these, the correct style to use is ``Heading 5''. Use 
-``figure caption'' for your Figure captions, and ``table head'' for your 
-table title. Run-in heads, such as ``Abstract'', will require you to apply a 
-style (in this case, italic) in addition to the style provided by the drop 
-down menu to differentiate the head from the text.
-
-Text heads organize the topics on a relational, hierarchical basis. For 
-example, the paper title is the primary text head because all subsequent 
-material relates and elaborates on this one topic. If there are two or more 
-sub-topics, the next level head (uppercase Roman numerals) should be used 
-and, conversely, if there are not at least two sub-topics, then no subheads 
-should be introduced.
-
-\subsection{Figures and Tables}
-\paragraph{Positioning Figures and Tables} Place figures and tables at the top and 
-bottom of columns. Avoid placing them in the middle of columns. Large 
-figures and tables may span across both columns. Figure captions should be 
-below the figures; table heads should appear above the tables. Insert 
-figures and tables after they are cited in the text. Use the abbreviation 
-``Fig.~\ref{fig}'', even at the beginning of a sentence.
-
-\begin{table}[htbp]
-\caption{Table Type Styles}
+\begin{table*}[htbp]
+\caption{Examples of Domain-Specific Lexicon Created Using Term Frequency and Cosine Similarity}
 \begin{center}
-\begin{tabular}{|c|c|c|c|}
+\begin{tabular}{|c|c|c|c|c|c|}
 \hline
-\textbf{Table}&\multicolumn{3}{|c|}{\textbf{Table Column Head}} \\
-\cline{2-4} 
-\textbf{Head} & \textbf{\textit{Table column subhead}}& \textbf{\textit{Subhead}}& \textbf{\textit{Subhead}} \\
+\multicolumn{2}{|c|}{\textbf{Restaurant}}&\multicolumn{2}{|c|}{\textbf{Handphone}}&\multicolumn{2}{|c|}{\textbf{Digital Camera}}\\
+\hline 
+\textbf{\textit{Aspect}}& \textbf{\textit{Opinion}}&\textbf{\textit{Aspect}}& \textbf{\textit{Opinion}}&\textbf{\textit{Aspect}}& \textbf{\textit{Opinion}}\\
 \hline
-copy& More table copy$^{\mathrm{a}}$& &  \\
+restaurants$\vert$NOUN&little$\vert$ADJ&phone$\vert$NOUN&new$\vert$ADJ&camera$\vert$NOUN&different$\vert$ADJ\\
 \hline
-\multicolumn{4}{l}{$^{\mathrm{a}}$Sample of a Table footnote.}
+tasting\_menu$\vert$NOUN&very\_best$\vert$ADJ&device$\vert$NOUN&good$\vert$ADJ&image\_quality$\vert$NOUN&excellent$\vert$ADJ \\
+\hline
+prices$\vert$NOUN&excellent$\vert$ADJ&touchscreen\_display$\vert$NOUN&massive$\vert$ADJ&fidelity$\vert$PROPN&best$\vert$ADJ \\
+\hline
+dishes$\vert$NOUN&efficient$\vert$ADJ&performance$\vert$NOUN&fantastic$\vert$ADJ&algorithm$\vert$NOUN&decent$\vert$ADJ \\
+\hline
+ingredient\_quality$\vert$NOUN&greatest$\vert$ADJ&quality$\vert$NOUN&decent$\vert$ADJ&aps\_c$\vert$NOUN&big$\vert$ADJ \\
+\hline
 \end{tabular}
-\label{tab100}
+\label{tab2}
 \end{center}
-\end{table}
+\end{table*}
 
+\paragraph{Cosine Similarity}
+In this method, we compared the similarity of each word to the averaged word vector of aspect class, averaged word vector of opinion class, and averaged word vector of other class. After that, we chose the nearest averaged word vector as the class.
 
-Figure Labels: Use 8 point Times New Roman for Figure labels. Use words 
-rather than symbols or abbreviations when writing Figure axis labels to 
-avoid confusing the reader. As an example, write the quantity 
-``Magnetization'', or ``Magnetization, M'', not just ``M''. If including 
-units in the label, present them within parentheses. Do not label axes only 
-with units. In the example, write ``Magnetization (A/m)'' or ``Magnetization 
-\{A[m(1)]\}'', not just ``A/m''. Do not label axes with a ratio of 
-quantities and units. For example, write ``Temperature (K)'', not 
-``Temperature/K''.
+\subsubsection{Unsupervised Approach}
+In this approach, we clustered the word vectors in train data using K-Means and K-Medoids method. Then, we used the computed centroids to predict the test data.
+
+\section{Experiments}
+
+\subsection{Experiments on Word Classification}
+The experiments on word classification were conducted on three domains: digital camera, handphone, and restaurant. In the word classification task, we aimed to classify each word to aspect, opinion, and other class. The statistics of each domains are listed on Table IV. 
+
+To evaluate the experiments, we used multiple metrics such as F1 score, accuracy, and Adjusted Rand Index (ARI) The F1 score and accuracy were used as the metrics for the supervised classification while ARI was used as the metric for the unsupervised classification. F1 score was chosen because of the imbalance in the datasets. By using F1 score, we hoped to see whether each class could be classified correctly or not. The results of the experiments are as follows:
+
+\subsubsection{Experiments on Unsupervised Classification with KMeans and K-Medoids}
+The ARI score was computed using the class labels and the predicted labels. The maximum ARI score is one if the clusters between class labels and predicted labels are identical. Table V shows that the resulting ARIs that we obtained are mostly near zero, meaning that our results are almost equal to the results of random clustering. Some of the ARI scores are even lower than zero, less than what is expected from a random result. There are no significant differences between the ARI scores of K-Means and K-Medoids.
+
+\subsubsection{Experiments on Supervised Classification with Cosine Similarity}
+Based on the results displayed on Table VI, we could see that other than the classification on the restaurant domain with CBOW model, the accuracies of classification with word vectors of size 300 as the feature are higher than classification with word vectors of size 400. In the restaurant and digital camera domain, the use of Skip-gram model has given us better results than CBOW model, but in the handphone domain the reverse is true. 
+
+\subsubsection{Experiments on Supervised Classification with SVM Classifier}
+In Table VI, we could see that the use of word vector created by CBOW model has given us better results than Skip-gram model. In all experiments other than the experiments in handphone domain by using word vectors created by Skip-gram model, the use of word vectors of size 300 results in better accuracy than using word vectors of size 400. In every domain, the highest accuracies are achieved by using word vectors of size 300 created by CBOW model.  
+
+\subsection{Experiments on Aspect Extraction}
+We evaluated the performance of aspect extraction methods across four datasets, listed on Table VII. Canon G3, Nikon Coolpix 4300, and Nokia 6610 datasets are a part of Customer Review Datasets created by Hu and Liu [16], while ABSA16\_Restaurants\_Train\_SB1 dataset is from SemEval 2016 Task 5: Aspect-Based Sentiment Analysis [17]. We compared the performance of modified Sequential Covering method with the baseline Sequential Covering method.
+
+The results of the experiments are as follows:
+\subsubsection{Baseline Sequential Covering without Lexicon}
+On Table VIII, we could see that this method yields very high recall but low precision. The reason is because a lot of irrelevant opinion pairs are also extracted.
+\subsubsection{Modified Sequential Covering}
+We used the best configurations from the previous experiments to build the domain-specific lexicons that we used in this method. In all of the experiments, we used lexicons of size 1000.
+\paragraph{With Domain-Specific Lexicon Created Using Term Frequency and Cosine Similarity}
+To create the lexicon, we used 50 most frequent words expanded with 20 most similar words for each word. The results on Table VIII shows that this method managed to yield better F1 scores than the baseline method, but the recalls are lower. For Nokia 6610 dataset, this method gives the highest precision and F1 score.
+\paragraph{With domain-specific lexicon created using term frequency only}
+We used 1000 most frequent words to create the lexicon used in this experiment. On Table VIII, we could see that in every dataset other than the Nokia 6610 dataset, this lexicon gives better results than the lexicon created with the previous approach. Even though the recalls are still lower than the baseline Sequential Covering, the F1 scores from this method are higher than the other methods.
 
 \section{The Cost and Benefit of Using Domain-Specific Lexicon over Aspect and Opinion List}
 To build a domain-specific lexicon, we need labelled data. In our experiments, the labelling process is done manually, making it a rather costly process because it takes time and effort. Some knowledge of the domain is also necessary to make sure that the classes are labelled correctly.
@@ -380,38 +309,26 @@ an ``e'' after the ``g''. Avoid the stilted expression ``one of us (R. B.
 G.) thanks $\ldots$''. Instead, try ``R. B. G. thanks$\ldots$''. Put sponsor 
 acknowledgments in the unnumbered footnote on the first page.
 
-\section*{References}
-
-Please number citations consecutively within brackets \cite{b1}. The 
-sentence punctuation follows the bracket \cite{b2}. Refer simply to the reference 
-number, as in \cite{b3}---do not use ``Ref. \cite{b3}'' or ``reference \cite{b3}'' except at 
-the beginning of a sentence: ``Reference \cite{b3} was the first $\ldots$''
-
-Number footnotes separately in superscripts. Place the actual footnote at 
-the bottom of the column in which it was cited. Do not put footnotes in the 
-abstract or reference list. Use letters for table footnotes.
-
-Unless there are six authors or more give all authors' names; do not use 
-``et al.''. Papers that have not been published, even if they have been 
-submitted for publication, should be cited as ``unpublished'' \cite{b4}. Papers 
-that have been accepted for publication should be cited as ``in press'' \cite{b5}. 
-Capitalize only the first word in a paper title, except for proper nouns and 
-element symbols.
-
-For papers published in translation journals, please give the English 
-citation first, followed by the original foreign-language citation \cite{b6}.
-
 \begin{thebibliography}{00}
 \bibitem{b1} B. Liu, Sentiment Analysis and Opinion Mining. San Rafael, CA: Morgan and Claypool Publishers, 2012.
 \bibitem{b2} F. Z. Ruskanda, D. H. Widyantoro, and A. Purwarianti, ``Sequential covering rule learning for language rule-based aspect extraction," 2019 Int. Conf. on Adv. Comput. Sci. and Inf. Syst. (ICACSIS).
-\bibitem{b3} I. S. Jacobs and C. P. Bean, ``Fine particles, thin films and exchange anisotropy,'' in Magnetism, vol. III, G. T. Rado and H. Suhl, Eds. New York: Academic, 1963, pp. 271--350.
-\bibitem{b4} K. Elissa, ``Title of paper if known,'' unpublished.
-\bibitem{b5} R. Nicole, ``Title of paper with only first word capitalized,'' J. Name Stand. Abbrev., in press.
-\bibitem{b6} Y. Yorozu, M. Hirano, K. Oka, and Y. Tagawa, ``Electron spectroscopy studies on magneto-optical media and plastic substrate interface,'' IEEE Transl. J. Magn. Japan, vol. 2, pp. 740--741, August 1987 [Digests 9th Annual Conf. Magnetics Japan, p. 301, 1982].
-\bibitem{b7} M. Young, The Technical Writer's Handbook. Mill Valley, CA: University Science, 1989.
+\bibitem{b3} H. Avancini, A. Lavelli, F. Sebastiani, and R. Zanoli, ``Automatic expansion of domain-specific lexicons by term categorization," ACM Trans. on Speech and Lang. Process. (TSLP), 3(1):1–30, 2006.
+\bibitem{b4} S. N. Kim, T. Baldwin, and M.-Y. Kan, ``Extracting domain-specific words - a statistical approach," in Proc. of the 2009 Australas. Lang. Technol. Assoc. Workshop, Sydney, Australia, pp. 94–98.
+\bibitem{b5} F. Xu, D. Kurz, J. Piskorski, and S. Schmeier, ``A domain adaptive approach to automatic acquisition of domain relevant terms and their relations with bootstrapping," Proc. 3rd Int. Conf. Lang. Resour. and Eval. (LREC 2002), 2002.
+\bibitem{b6} R. Wang, W. Liu, and C. McDonald, ``Featureless domain-specific term extraction with minimal labelled data," in Proc. of the Australas. Lang. Technol. Assoc. Workshop 2016, Melbourne, Australia, December 2016, pp. 103–112.
+\bibitem{b7} S. Park, W. Lee, and I.-C. Moon, ``Efficient extraction of domain specific sentiment lexicon with active learning," Pattern Recognit. Lett., vol. 56, pp. 38–44, 2015.
+\bibitem{b8} W. Hamilton, K. Clark, J. Leskovec, and D. Jurafsky, ``Inducing domain-specific sentiment lexicons from unlabeled corpora," Proc. of the 2016 Conf. on Empirical Methods on Natural Lang. Process. (EMNLP), 2016.
+\bibitem{b9} G. Grefenstette and L. Muchemi, ``Determining the characteristic vocabulary for a specialized dictionary using Word2vec and a directed crawler," Int. Conf. on Lang. Resour. and Eval. (LREC 2016)-GLOBALEX 2016, pp.81–85.
+\bibitem{b10} L. Zhuang, F. Jing, X.-Yan Zhu, and L. Zhang, “Movie review mining and summarization,” CIKM-06, 2006.
+\bibitem{b11} G. S. Chauhan and Y. K. Meena, ``DomSent: domain-specific aspect term extraction in aspect-based sentiment analysis," Smart Systems and IoT: Innovations in Computing, pp. 103-109, 2020.
+\bibitem{b12} D. Anand and D. Naorem, ``Semi-supervised aspect based sentiment analysis for movies using review filtering," Procedia Comput. Sci., 84, 86-93.
+\bibitem{b13} A. Mukherjee and B. Liu, ``Aspect extraction through semi-supervised modeling," in Proc. of the 50th Annu. Meeting of the Assoc. for Comput. Linguistics (Volume 1: Long Papers) (pp. 339-348).
+\bibitem{b14} A. Trask, P. Michalak, and J. Liu, ``Sense2vec-a fast and accurate method for word sense disambiguation in neural word embeddings," arXiv preprint arXiv:1511.06388, 2015.
+\bibitem{b15} T. Joachims, ``Text categorization with support vector machines: learning with many relevant features," in Proc. of ECML-98, 10th Eur. Conf. on Mach. Learn. (Chemnitz, Germany, 1998), 137-142.
+\bibitem{b16} M. Hu and B. Liu, ``Mining opinion features in customer reviews," Am. Assoc. Artif. Intell., pp. 755–760, 2004.
+\bibitem{b17} M. Pontiki et al., “SemEval-2016 task 5: aspect based sentiment analysis,” pp. 19–30, 2016.
+\bibitem{b18} Explosion AI, spaCy 101: Everything you need to know. 2017 [Online]. Available: https://spacy.io/usage/spacy-101. [Accessed: 12- Jun- 2020] 
 \end{thebibliography}
 \vspace{12pt}
-\color{red}
-IEEE conference templates contain guidance text for composing and formatting conference papers. Please ensure that all template text is removed from your conference paper prior to submission to the conference. Failure to remove the template text from your paper may result in your paper not being published.
 
 \end{document}
