--- a/Conference-LaTeX-template_10-17-19/conference_101719.tex
+++ b/Conference-LaTeX-template_10-17-19/conference_101719.tex
@@ -26,6 +26,7 @@ email address or ORCID}
 \author{\IEEEauthorblockN{Prisila Michelle\IEEEauthorrefmark{1},
 Fariska Zakhralativa Ruskanda\IEEEauthorrefmark{2}, Ayu Purwarianti\IEEEauthorrefmark{3}}
 \IEEEauthorblockA{School of Electrical Engineering and Informatics\\
+\IEEEauthorrefmark{3}U-CoE AI-VLB\\
 Institut Teknologi Bandung\\
 Bandung, Indonesia\\
 \IEEEauthorrefmark{1}13516129@std.stei.itb.ac.id,
