--- a/Conference-LaTeX-template_10-17-19/conference_101719.tex
+++ b/Conference-LaTeX-template_10-17-19/conference_101719.tex
@@ -328,7 +328,7 @@ In Table~\ref{tab6}, we could see that the use of word vector created by CBOW mo
 \cline{4-11}
 &\textbf{Size}& &\multicolumn{3}{|c|}{\textbf{F1 Score}}&\textbf{Accuracy}&\multicolumn{3}{|c|}{\textbf{F1 Score}}&\textbf{Accuracy}\\
 \cline{4-6}\cline{8-10}
-& & &\textit{Aspect}&\textit{Opinion}&\textit{Other}& &\textit{Aspect}&\textit{Opinion}&\textit{Other}& \\
+& & &\textbf{\textit{Aspect}}&\textbf{\textit{Opinion}}&\textbf{\textit{Other}}& &\textbf{\textit{Aspect}}&\textbf{\textit{Opinion}}&\textbf{\textit{Other}}& \\
 \hline
 CBOW&300&Restaurant&0.567&0.576&0.583&0.575&\textbf{0.830}&\textbf{0.782}&\textbf{0.780}&\textbf{0.802} \\
 \cline{3-11}
